--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "node-fetch": "^3.3.0"
   },
   "bin": {
-    "galosh.js": "./cli.js",
-    "type": "module"
+    "galosh.js": "./cli.js"
   }
 }
