--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "a02-functions-diamoah",
   "version": "1.0.0",
   "description": "This assignment will help you learn to create an installable Node.js command line utility.",
-  "main": "index.js",
+  "main": "galosh.js",
   "scripts": {
     "test": "node cli.js -n 35.92 -w 79.05 -z America/New_York"
   },
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/comp426-2023-spring/a02-functions-Diamoah.git"
   },
-  "author": "Diamoah",
+  "author": "diamoah",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/comp426-2023-spring/a02-functions-Diamoah/issues"
